syntax = "proto3";

package v1;

option go_package = ".;pb";

message RegisterRequest{
    string username = 1;
    string password = 2;
}

message RegisterResponse{}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutRequest{
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutResponse{}

service AuthService{
    rpc Register(RegisterRequest) returns (RegisterResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc Logout(LogoutRequest) returns (LogoutResponse){}
}