syntax = "proto3";

package v1;

option go_package = ".;pb";

import "notification_message.proto";

message NotifyRequest{}

message NotifyResponse{
    Notification notification = 1;
}

service NotificationService{
    // Notify by sending stream of notification
    rpc Notify(NotifyRequest)returns(stream NotifyResponse){}
}